--- a/translations/kangyur/translations/071-011_toh297-the_sutra_of_many_domains.xml
+++ b/translations/kangyur/translations/071-011_toh297-the_sutra_of_many_domains.xml
@@ -39,7 +39,7 @@
                                         Cotter</editor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 1.0.0 <date>2023</date>
+                <edition>v 1.0.1 <date>2023</date>
                 </edition>
             </editionStmt>
                         <publicationStmt>
@@ -192,6 +192,9 @@
                     <desc>1.a</desc>
                 </change>
                 <change who="#martina-cotter" when="2023-08-08T13:25:08.103Z" type="text-version" status="1.0.0" xml:id="UT22084-071-011-209">
+                    <desc>First published version</desc>
+                </change>
+                <change who="#martina-cotter" when="2023-08-08T14:01:08.082Z" type="text-version" status="1.0.1" xml:id="UT22084-071-011-210">
                     <desc>First published version</desc>
                 </change>
                         </revisionDesc>
@@ -1546,6 +1549,7 @@
                                                   <term type="translationMain">ten powers</term>
                                                   <term xml:lang="Sa-Ltn" type="attestedOther" status="verified">daśabala</term>
                                                   <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">stobs bcu</term>
+                                                <term xml:lang="bo" n="1">སྟོབས་བཅུ།</term>
                                                   <note type="definition">
                                                   <p>The classical list of the Buddha’s ten powers,
                                                   which appears frequently throughout both Pāli and
@@ -1564,7 +1568,6 @@
                                                   and rebirth (Skt. <foreign xml:lang="Sa-Ltn" type="term">cyutyupapatti</foreign>). (10) Knowing
                                                   the exhaustion of the defilements (Skt. <foreign xml:lang="Sa-Ltn" type="term">āsravakṣaya</foreign>).</p>
                                                   </note>
-                                                  <term xml:lang="bo" type="attestedSource" n="1" status="verified">སྟོབས་བཅུ།</term>
                                                 </gloss>
                     </item>
                                         <item>
