--- a/translations/kangyur/placeholders/076-010_toh356-from_the_sutra_of_the_questions_of_candragarbha_showing_how_the_buddhas_teaching_abides_and_perishes.xml
+++ b/translations/kangyur/placeholders/076-010_toh356-from_the_sutra_of_the_questions_of_candragarbha_showing_how_the_buddhas_teaching_abides_and_perishes.xml
@@ -10,10 +10,11 @@
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa zla ba'i snying pos zhus pa'i mdo las sangs rgyas kyi bstan pa gnas pa dang 'jig pa'i tshul bstan pa</title>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.4 <date>2021</date>
+                <edition>v 0.0.6 <date>2023</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="4">
+            <publicationStmt>
+                <availability status="3"/>
                 <idno xml:id="UT22084-076-010"/>
                 <date/>
             </publicationStmt>
@@ -28,13 +29,30 @@
                     <idno source-id="O1JC114941JC12046" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2021-10-25T13:01:31Z" user="admin">25/10/2021 13:01:31</note>
-                <note type="updated" update="text-version" value="0.0.2" date-time="2021-04-28T11:05:44.602Z" user="john">0.0.2</note>
-                <note type="updated" update="text-version" value="0.0.3" date-time="2021-04-28T11:06:17.608Z" user="john">0.0.3</note>
-    <note type="updated" update="translation-status" value="4" date-time="2021-10-25T13:01:25.719Z" user="line-tofte">4</note>
-    <note type="updated" update="text-version" value="0.0.4" date-time="2021-10-25T13:01:25.719Z" user="line-tofte">Auto (update-publication-status)</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#john" when="2021-04-28T11:05:44.602Z" type="text-version" status="0.0.2" xml:id="UT22084-076-010-1">
+                    <desc>0.0.2</desc>
+                </change>
+                <change who="#john" when="2021-04-28T11:06:17.608Z" type="text-version" status="0.0.3" xml:id="UT22084-076-010-2">
+                    <desc>0.0.3</desc>
+                </change>
+                <change who="#line-tofte" when="2021-10-25T13:01:25.719Z" type="translation-status" status="4" xml:id="UT22084-076-010-3">
+                    <desc>4</desc>
+                </change>
+                <change who="#line-tofte" when="2021-10-25T13:01:25.719Z" type="text-version" status="0.0.4" xml:id="UT22084-076-010-4">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.5" xml:id="UT22084-076-010-5">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-08-08T14:10:57.528Z" type="translation-status" status="3" xml:id="UT22084-076-010-6">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2023-08-08T14:10:57.528Z" type="text-version" status="0.0.6" xml:id="UT22084-076-010-7">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
