--- a/translations/kangyur/placeholders/090-046_toh602,921-the_incantation_that_makes_erecting_one_reliquary_like_erecting_ten_million.xml
+++ b/translations/kangyur/placeholders/090-046_toh602,921-the_incantation_that_makes_erecting_one_reliquary_like_erecting_ten_million.xml
@@ -9,10 +9,11 @@
                 <title type="mainTitle" xml:lang="en">The Dhāraṇī that Makes Erecting One Reliquary Like Erecting Ten Million</title>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.1 <date>2021</date>
+                <edition>v 0.0.3 <date>2023</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="4">
+            <publicationStmt>
+                <availability status="3"/>
                 <idno xml:id="UT22084-090-046"/>
                 <date/>
             </publicationStmt>
@@ -36,11 +37,24 @@
                     <idno source-id="O1JC114941JC12683" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2021-09-23T17:34:03.698Z" user="celso">23/09/2021 17:34:03</note>
-    <note type="updated" update="translation-status" value="4" date-time="2021-08-26T13:25:27.591Z" user="line-tofte">4</note>
-    <note type="updated" update="text-version" value="0.0.1" date-time="2021-08-26T13:25:27.591Z" user="line-tofte">0.0.1</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#line-tofte" when="2021-08-26T13:25:27.591Z" type="translation-status" status="4" xml:id="UT22084-090-046-1">
+                    <desc>4</desc>
+                </change>
+                <change who="#line-tofte" when="2021-08-26T13:25:27.591Z" type="text-version" status="0.0.1" xml:id="UT22084-090-046-2">
+                    <desc>0.0.1</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.2" xml:id="UT22084-090-046-3">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-08-08T14:14:50.055Z" type="translation-status" status="3" xml:id="UT22084-090-046-4">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2023-08-08T14:14:50.055Z" type="text-version" status="0.0.3" xml:id="UT22084-090-046-5">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
