--- a/translations/kangyur/placeholders/088-018_toh524,977-the_incantation_the_doubtless.xml
+++ b/translations/kangyur/placeholders/088-018_toh524,977-the_incantation_the_doubtless.xml
@@ -13,10 +13,11 @@
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryaniścayanāmadhāraṇī</title>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.1 <date>2021</date>
+                <edition>v 0.0.3 <date>2023</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="4">
+            <publicationStmt>
+                <availability status="3"/>
                 <idno xml:id="UT22084-088-018"/>
                 <date/>
             </publicationStmt>
@@ -40,11 +41,24 @@
                     <idno source-id="O1JC114941JC12740" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2021-09-23T17:32:56.604Z" user="celso">23/09/2021 17:32:56</note>
-    <note type="updated" update="translation-status" value="4" date-time="2021-08-26T13:22:35.594Z" user="line-tofte">4</note>
-    <note type="updated" update="text-version" value="0.0.1" date-time="2021-08-26T13:22:35.594Z" user="line-tofte">0.0.1</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#line-tofte" when="2021-08-26T13:22:35.594Z" type="translation-status" status="4" xml:id="UT22084-088-018-1">
+                    <desc>4</desc>
+                </change>
+                <change who="#line-tofte" when="2021-08-26T13:22:35.594Z" type="text-version" status="0.0.1" xml:id="UT22084-088-018-2">
+                    <desc>0.0.1</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.2" xml:id="UT22084-088-018-3">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-08-08T14:17:06.596Z" type="translation-status" status="3" xml:id="UT22084-088-018-4">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2023-08-08T14:17:06.596Z" type="text-version" status="0.0.3" xml:id="UT22084-088-018-5">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
