--- a/translations/kangyur/placeholders/063-002_toh221-the_sutra_of_advice_to_the_king.xml
+++ b/translations/kangyur/placeholders/063-002_toh221-the_sutra_of_advice_to_the_king.xml
@@ -11,10 +11,11 @@
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryarājāvavādakanāmamahāyānasūtra</title>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.1 <date>2021</date>
+                <edition>v 0.0.3 <date>2023</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="4">
+            <publicationStmt>
+                <availability status="3"/>
                 <idno xml:id="UT22084-063-002"/>
                 <date/>
             </publicationStmt>
@@ -29,11 +30,24 @@
                     <idno source-id="O1JC114941JC11863" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2021-08-30T09:15:34.975Z" user="admin">30/08/2021 09:15:34</note>
-    <note type="updated" update="translation-status" value="4" date-time="2021-08-30T09:15:29.948Z" user="line-tofte">4</note>
-    <note type="updated" update="text-version" value="0.0.1" date-time="2021-08-30T09:15:29.948Z" user="line-tofte">0.0.1</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#line-tofte" when="2021-08-30T09:15:29.948Z" type="translation-status" status="4" xml:id="UT22084-063-002-1">
+                    <desc>4</desc>
+                </change>
+                <change who="#line-tofte" when="2021-08-30T09:15:29.948Z" type="text-version" status="0.0.1" xml:id="UT22084-063-002-2">
+                    <desc>0.0.1</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.2" xml:id="UT22084-063-002-3">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-08-09T10:11:51.878Z" type="translation-status" status="3" xml:id="UT22084-063-002-4">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2023-08-09T10:11:51.878Z" type="text-version" status="0.0.3" xml:id="UT22084-063-002-5">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
