--- a/translations/kangyur/placeholders/085-004_toh484-the_actions_to_be_practiced.xml
+++ b/translations/kangyur/placeholders/085-004_toh484-the_actions_to_be_practiced.xml
@@ -9,10 +9,11 @@
                 <title type="mainTitle" xml:lang="en">The Actions to be Practiced</title>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.1 <date>2021</date>
+                <edition>v 0.0.3 <date>2023</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="4">
+            <publicationStmt>
+                <availability status="3"/>
                 <idno xml:id="UT22084-085-004"/>
                 <date/>
             </publicationStmt>
@@ -27,11 +28,24 @@
                     <idno source-id="O1JC114941JC12200" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2021-08-26T13:21:26.87Z" user="admin">26/08/2021 13:21:26</note>
-    <note type="updated" update="translation-status" value="4" date-time="2021-08-26T13:21:21.927Z" user="line-tofte">4</note>
-    <note type="updated" update="text-version" value="0.0.1" date-time="2021-08-26T13:21:21.927Z" user="line-tofte">0.0.1</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#line-tofte" when="2021-08-26T13:21:21.927Z" type="translation-status" status="4" xml:id="UT22084-085-004-1">
+                    <desc>4</desc>
+                </change>
+                <change who="#line-tofte" when="2021-08-26T13:21:21.927Z" type="text-version" status="0.0.1" xml:id="UT22084-085-004-2">
+                    <desc>0.0.1</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.2" xml:id="UT22084-085-004-3">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-08-09T10:14:11.594Z" type="translation-status" status="3" xml:id="UT22084-085-004-4">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2023-08-09T10:14:11.594Z" type="text-version" status="0.0.3" xml:id="UT22084-085-004-5">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
