--- a/translations/kangyur/placeholders/056-001_toh133-the_sutra_on_the_samadhi_in_which_the_buddhas_of_the_present_all_stand_before_one.xml
+++ b/translations/kangyur/placeholders/056-001_toh133-the_sutra_on_the_samadhi_in_which_the_buddhas_of_the_present_all_stand_before_one.xml
@@ -12,13 +12,14 @@
                 <title type="otherTitle" xml:lang="zh">《現前佛面前安住三昧經》（大正藏：《般舟三昧經》）</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">bzang skyong gis zhus pa'i ting 'dzin le'u/</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa da ltar gyi sangs rgyas mngon sum du bzhugs pa'i ting nge 'dzin ces bya ba theg pa chen po'i mdo</title>
-                <sponsor ref="eft:sponsor-206">Kelvin Lee, Doris Lim, Chang Chen Hsien, Gephel Lim, Ng Ah Chon &amp; all sentient beings</sponsor>
+                <sponsor xml:id="UT22084-056-001-1">Kelvin Lee, Doris Lim, Chang Chen Hsien, Gephel Lim, Ng Ah Chon &amp; all sentient beings</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.7 <date/>
+                <edition>v 0.0.9 <date>2023</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="">
+            <publicationStmt>
+                <availability status="4"/>
                 <idno xml:id="UT22084-056-001"/>
             </publicationStmt>
             <sourceDesc>
@@ -32,16 +33,39 @@
                     <idno source-id="O1JC114941JC11716" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2022-07-26T05:54:23.62Z" user="admin">26/07/2022 05:54:23</note>
-                <note type="updated" update="text-version" value="0.0.1" date-time="2021-05-10T13:32:48.384Z" user="amy">Auto (update-titles)</note>
-                <note type="updated" update="text-version" value="0.0.2" date-time="2021-05-10T16:48:35.265Z" user="amy">Auto (update-titles)</note>
-                <note type="updated" update="text-version" value="0.0.3" date-time="2022-03-09T13:32:09.345Z" user="cabie-sim">Auto (update-sponsorship)</note>
-                <note type="updated" update="text-version" value="0.0.4" date-time="2022-03-18T11:49:09Z" user="cabie-sim">Auto (update-sponsorship)</note>
-                <note type="updated" update="text-version" value="0.0.5" date-time="2022-03-18T11:51:55.736Z" user="cabie-sim">Auto (update-sponsorship)</note>
-                <note type="updated" update="text-version" value="0.0.6" date-time="2022-03-18T11:53:08.681Z" user="cabie-sim">Auto (update-sponsorship)</note>
-                <note type="updated" update="text-version" value="0.0.7" date-time="2022-07-26T05:54:21.595Z" user="cabie-sim">Auto (update-titles)</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#amy" when="2021-05-10T13:32:48.384Z" type="text-version" status="0.0.1" xml:id="UT22084-056-001-2">
+                    <desc>Auto (update-titles)</desc>
+                </change>
+                <change who="#amy" when="2021-05-10T16:48:35.265Z" type="text-version" status="0.0.2" xml:id="UT22084-056-001-3">
+                    <desc>Auto (update-titles)</desc>
+                </change>
+                <change who="#cabie-sim" when="2022-03-09T13:32:09.345Z" type="text-version" status="0.0.3" xml:id="UT22084-056-001-4">
+                    <desc>Auto (update-sponsorship)</desc>
+                </change>
+                <change who="#cabie-sim" when="2022-03-18T11:49:09Z" type="text-version" status="0.0.4" xml:id="UT22084-056-001-5">
+                    <desc>Auto (update-sponsorship)</desc>
+                </change>
+                <change who="#cabie-sim" when="2022-03-18T11:51:55.736Z" type="text-version" status="0.0.5" xml:id="UT22084-056-001-6">
+                    <desc>Auto (update-sponsorship)</desc>
+                </change>
+                <change who="#cabie-sim" when="2022-03-18T11:53:08.681Z" type="text-version" status="0.0.6" xml:id="UT22084-056-001-7">
+                    <desc>Auto (update-sponsorship)</desc>
+                </change>
+                <change who="#cabie-sim" when="2022-07-26T05:54:21.595Z" type="text-version" status="0.0.7" xml:id="UT22084-056-001-8">
+                    <desc>Auto (update-titles)</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.8" xml:id="UT22084-056-001-9">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-08-10T07:18:41.335Z" type="translation-status" status="4" xml:id="UT22084-056-001-10">
+                    <desc>4</desc>
+                </change>
+                <change who="#line-tofte" when="2023-08-10T07:18:41.335Z" type="text-version" status="0.0.9" xml:id="UT22084-056-001-11">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
