--- a/translations/kangyur/translations/090-006_toh562-the_sutra_of_great_cool_grove.xml
+++ b/translations/kangyur/translations/090-006_toh562-the_sutra_of_great_cool_grove.xml
@@ -30,7 +30,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-090-006-465">Rory Lindsay</editor>
             </titleStmt>
                         <editionStmt>
-                <edition>v 1.0.0 <date>2023</date>
+                <edition>v 1.0.1 <date>2023</date>
                 </edition>
             </editionStmt>
                         <publicationStmt>
@@ -55,7 +55,7 @@
                 <note>An early mistake in the assigning of UT numbers within the
                                         84000 project means that these ids diverge slightly from the
                                         standard logic.</note>
-                <date>2023-05-11</date>
+                <date>2023-08-11</date>
             </publicationStmt>
                         <sourceDesc>
                                 <bibl key="toh562" type="text">
@@ -136,6 +136,9 @@
                 </change>
                 <change who="#martina-cotter" when="2023-08-11T23:29:16.322Z" type="text-version" status="1.0.0" xml:id="UT22084-090-006-468">
                     <desc>First published version</desc>
+                </change>
+                <change who="#martina-cotter" when="2023-08-11T23:45:07.374Z" type="text-version" status="1.0.1" xml:id="UT22084-090-006-469">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
