--- a/translations/tengyur/publications/113-010_toh3990-aryacaturdharmakavyakhyana.xml
+++ b/translations/tengyur/publications/113-010_toh3990-aryacaturdharmakavyakhyana.xml
@@ -26,7 +26,7 @@
                                         Cotter</editor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 0.1.1 <date>2023</date>
+                <edition>v 0.1.2 <date>2023</date>
                 </edition>
             </editionStmt>
                         <publicationStmt>
@@ -187,6 +187,9 @@
                 </change>
                 <change who="#john" when="2023-08-12T18:21:49.191Z" type="text-version" status="0.1.1" xml:id="UT23703-113-010-147">
                     <desc>Final check and several edits to intro, notes, bibliography.</desc>
+                </change>
+                <change who="#john" when="2023-08-12T18:22:39.76Z" type="text-version" status="0.1.2" xml:id="UT23703-113-010-148">
+                    <desc>User set version to 0.1.2</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
