--- a/translations/kangyur/translations/066-008_toh250-the_sutra_on_four_points.xml
+++ b/translations/kangyur/translations/066-008_toh250-the_sutra_on_four_points.xml
@@ -30,7 +30,7 @@
                                         Cotter</editor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 0.1.1 <date>2023</date>
+                <edition>v 0.1.2 <date>2023</date>
                 </edition>
             </editionStmt>
                         <publicationStmt>
@@ -172,6 +172,9 @@
                 </change>
                 <change who="#john" when="2023-08-12T10:54:58.174Z" type="text-version" status="0.1.1" xml:id="UT22084-066-008-150">
                     <desc>Checked, numerous edits, now ready for publication.</desc>
+                </change>
+                <change who="#john" when="2023-08-12T18:24:25.045Z" type="text-version" status="0.1.2" xml:id="UT22084-066-008-151">
+                    <desc>User set version to 0.1.2</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
