--- a/translations/kangyur/translations/066-009_toh251-the_sutra_on_four_precepts.xml
+++ b/translations/kangyur/translations/066-009_toh251-the_sutra_on_four_precepts.xml
@@ -31,7 +31,7 @@
                                         Cotter</editor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 0.1.1 <date>2023</date>
+                <edition>v 0.1.2 <date>2023</date>
                 </edition>
             </editionStmt>
                         <publicationStmt>
@@ -174,6 +174,9 @@
                 <change who="#john" when="2023-08-12T16:31:25.027Z" type="text-version" status="0.1.1" xml:id="UT22084-066-009-262">
                     <desc>Final check and numerous edits, now ready for publication.</desc>
                 </change>
+                <change who="#john" when="2023-08-12T18:26:08.69Z" type="text-version" status="0.1.2" xml:id="UT22084-066-009-264">
+                    <desc>Further edits to link to Toh 3990.</desc>
+                </change>
             </revisionDesc>
         </fileDesc>
         </teiHeader>
@@ -209,7 +212,8 @@
                                         <p tid="9">
                         <title xml:lang="en">The Noble Mahāyāna Sūtra on
                                                 the Four Factors</title> 
-                                                (<title xml:lang="Sa-Ltn">Ārya­­catur­dharmaka­­nāma­­mahā­yānasūtra</title>) is
+                                                (<title xml:lang="Sa-Ltn">Ārya­­catur­dharmaka­­nāma­­mahā­yāna
+sūtra</title>) is
                                                 the third of three short sūtras with similar titles
                                                 (all referring to sets of four<foreign xml:lang="Sa-Ltn" type="term"> dharmas</foreign>
                                                 or factors of the path). In many 
@@ -220,14 +224,14 @@
                                         <p tid="45">Of the other sūtras in this set, <title xml:lang="en">The
                                                 Sūtra Teaching the Four Factors</title> (Toh
                                                 249)<note place="end" xml:id="UT22084-066-009-59">
-                                                        Pearcey, Adam. trans., <title xml:lang="en">
+                                                        Pearcey, Adam. trans. (2019), <title xml:lang="en">
                                 <ref target="http://read.84000.co/translation/toh249.html">The Sūtra Teaching the Four Factors</ref>
                                                         </title>, Toh 249 (84000:
                                                         Translating the Words of the Buddha, 2019).</note> is concerned with the
                                                 four factors necessary for the practice of
                                                 confession, while <title xml:lang="en">The Four Factors</title> (Toh
                                                 250)<note place="end" xml:id="UT22084-066-009-207">
-                                                        Pearcey, Adam. trans., <title xml:lang="en">
+                                                        Pearcey, Adam. trans. (2023a), <title xml:lang="en">
                                 <ref target="http://read.84000.co/translation/toh250.html">The 
                                                                 Four Factors</ref>
                             </title>, Toh 250 (84000:
@@ -320,15 +324,18 @@
                                                 of the text was complete by the early ninth
                                                 century.</p>
                                         <milestone unit="chunk" xml:id="UT22084-066-009-9"/>
-                                        <p tid="13">There is a short commentary on this sūtra
-                                                preserved in the Tengyur, which is attributed to
-                                                Vasubandhu (Toh 3990: *<title xml:lang="Sa-Ltn">Ārya­­catur­dharmaka­­vyākhyāna</title>, <title xml:lang="Bo-Ltn">’phags pa chos bzhi pa’i rnam
-                                                        par bshad pa</title>),<ref rend="pending" target="http://read.84000.co/translation/toh3990a.html"/>
+                                        <p tid="13">There is a short commentary on this sūtra attributed to
+                                                Vasubandhu and preserved in Tibetan in the Tengyur, 
+                                                (*<title xml:lang="Sa-Ltn">Ārya­­catur­dharmaka­­vyākhyāna</title>, <title xml:lang="Bo-Ltn">’phags pa chos bzhi pa’i rnam
+                                                        par bshad pa</title>, Toh 3990), which we have also translated,<note place="end" xml:id="UT22084-066-009-209">
+                                                                See Pearcey (2023b), <title xml:lang="en">
+                                <ref target="http://read.84000.co/translation/toh3990.html">An 
+                                                                        Explanation of The Noble Sūtra on the Four Factors</ref>
+                            </title>.</note> 
                                                 as well as a slightly longer commentary on this
-                                                commentary, which is attributed to Jñānadatta (Toh
-                                                3990a: *<title xml:lang="Sa-Ltn">Ārya­­catur­dharmaka­­vyākhyāna­ṭīkā</title>, <title xml:lang="Bo-Ltn">’phags pa chos bzhi pa’i rgya
-                                                  cher bshad pa’i rgya cher ’grel
-                                                pa</title>).</p>
+                                                commentary, attributed to Jñānadatta (: *<title xml:lang="Sa-Ltn">Ārya­­catur­dharmaka­­vyākhyāna­ṭīkā</title>, 
+                                                <title xml:lang="Bo-Ltn">’phags pa chos bzhi pa’i rgya cher bshad pa’i rgya cher ’grel
+                                                pa</title>, Toh 3990a).</p>
                                         <milestone unit="chunk" xml:id="UT22084-066-009-10"/>
                                         <p tid="14">Several independent treatises found within the
                                                 Tengyur also make reference to this sūtra.
@@ -400,20 +407,20 @@
                                                 great assembly of bodhisattvas. At that time, the
                                                 Blessed One addressed the monks: </p>
                                         <milestone unit="chunk" xml:id="UT22084-066-009-30"/>
-                                        <p tid="27">“Monks, for as long as they live, bodhisattva
-                                                great beings do not abandon four factors even at
+                                        <p tid="27">“Monks, for as long as they live, bodhisattvas,
+                                                great beings, do not abandon four factors even at
                                                 the cost of their lives. What are these four? </p>
                                         <milestone unit="chunk" xml:id="UT22084-066-009-31"/>
-                                        <p tid="28">“Monks, for as long as they live, bodhisattva
-                                                great beings do not abandon the thought of
+                                        <p tid="28">“Monks, for as long as they live, bodhisattvas,
+                                                great beings, do not abandon the thought of
                                                 awakening even at the cost of their lives.</p>
                                         <milestone unit="chunk" xml:id="UT22084-066-009-32"/>
-                                        <p tid="29">“Monks, for as long as they live, bodhisattva
-                                                great beings do not abandon the spiritual friend
+                                        <p tid="29">“Monks, for as long as they live, bodhisattvas,
+                                                great beings, do not abandon the spiritual friend
                                                 even at the cost of their lives.</p>
                                         <milestone unit="chunk" xml:id="UT22084-066-009-33"/>
-                                        <p tid="30">“Monks, for as long as they live, bodhisattva
-                                                great beings do not abandon tolerance and lenience
+                                        <p tid="30">“Monks, for as long as they live, bodhisattvas,
+                                                great beings, do not abandon tolerance and lenience
                                                 even at the cost of their lives.<note place="end" xml:id="UT22084-066-009-34"> According to
                                                   Jñānadatta’s commentary, tolerance (<foreign xml:lang="Sa-Ltn" type="term">kṣanti</foreign>;
                                                   <foreign xml:lang="Bo-Ltn" type="term">bzod
@@ -426,8 +433,8 @@
                                                   pa</foreign>).</note>
                     </p>
                                         <milestone unit="chunk" xml:id="UT22084-066-009-35"/>
-                                        <p tid="31">“Monks, for as long as they live, bodhisattva
-                                                great beings do not abandon dwelling in the
+                                        <p tid="31">“Monks, for as long as they live, bodhisattvas,
+                                                great beings, do not abandon dwelling in the
                                                 wilderness<note place="end" xml:id="UT22084-066-009-135">Dwelling in the
                                                         wilderness is also one of the twelve ascetic practices 
                                                         (<foreign xml:lang="Sa-Ltn">dhūtaguṇa</foreign>). Note that related to 
@@ -441,8 +448,8 @@
                                                         of “dwelling free of afflicted mental states.” See Edgerton s.v. <foreign xml:lang="Sa-Ltn">araṇya</foreign> 
                                                         and <foreign xml:lang="Sa-Ltn">araṇya</foreign>.</note> even at the cost of their lives.</p>
                                         <milestone unit="chunk" xml:id="UT22084-066-009-36"/>
-                                        <p tid="32">“Monks, for as long as they live, bodhisattva
-                                                great beings do not abandon these four factors even
+                                        <p tid="32">“Monks, for as long as they live, bodhisattvas,
+                                                great beings, do not abandon these four factors even
                                                 at the cost of their lives.”</p>
                                         <milestone unit="chunk" xml:id="UT22084-066-009-37"/>
                                         <p tid="33">The Blessed One spoke these words, and once the
@@ -524,7 +531,7 @@
                                         <bibl xml:id="UT22084-066-009-49">Jñānadatta. <title xml:lang="Bo-Ltn">’phags pa chos bzhi pa’i rgya
                                                   cher bshad pa’i rgya cher ’grel pa</title>
                                                 (*<title xml:lang="Sa-Ltn">Ārya­­catur­dharmaka­­vyākhyāna­­ṭīkā</title>). Toh
-                                                3990b, Degé Tengyur vol. 113 (mdo ’grel, ngi),
+                                                3990a, Degé Tengyur vol. 113 (mdo ’grel, ngi),
                                                 folios 67.a–71.b.</bibl>
                                         <bibl xml:id="UT22084-066-009-50">Longchen Rabjam (klong
                                                 chen rab ’byams). <title xml:lang="Bo-Ltn">yid bzhin
@@ -542,7 +549,7 @@
                                                 Toh 3940, Degé Tengyur vol. 111 (dbu ma, khi),
                                                 folios 3.a–194.b.</bibl>
                                         <bibl xml:id="UT22084-066-009-54">Vasubandhu. <title xml:lang="Bo-Ltn">’phags pa chos bzhi pa’i rnam
-                                                par bshad pa</title> (*<title xml:lang="Sa-Ltn">Ārya­­catur­dharmaka­­vyākhyāna</title>). Toh 3990a,
+                                                par bshad pa</title> (*<title xml:lang="Sa-Ltn">Ārya­­catur­dharmaka­­vyākhyāna</title>). Toh 3990,
                                                 Degé Tengyur vol. 113 (mdo ’grel, ngi), folios
                                                 66.a–66.b.</bibl>
                                         <bibl xml:id="UT22084-066-009-55">Vimalamitra. <title xml:lang="Bo-Ltn">rim gyis ’jug pa’i sgom
@@ -582,17 +589,24 @@
                                                   buddhistischen Texte</title>. Wien: Verlag der
                                                 Österreichischen Akademie der Wissenschaften,
                                                 2008.</bibl>
-                                        <bibl xml:id="UT22084-066-009-61">Pearcey, Adam, trans.
+                                        <bibl xml:id="UT22084-066-009-61">Pearcey, Adam, trans. (2019).
                                                 <title xml:lang="en">
                             <ref target="https://read.84000.co/translation/toh249.html">The Sūtra Teaching the Four
                                                           Factors</ref>
                         </title> (<title xml:lang="Sa-Ltn">Catur­dharma­­nirdeśa­­sūtra</title>, Toh 249). 84000:
                                                 Translating the Words of the Buddha, 2019.</bibl>
-                                        <bibl xml:id="UT22084-066-009-261">————, trans. 
+                                        <bibl xml:id="UT22084-066-009-261">————, trans. (2023a).
                                                 <title xml:lang="en">
                             <ref target="https://read.84000.co/translation/toh250.html">The Four Factors</ref>
                         </title> 
                                                 (<title xml:lang="Sa-Ltn">Catur­dharmaka­­sūtra</title>, Toh 250). 84000: Translating the
+                                                Words of the Buddha, 2023.</bibl>
+                                        <bibl xml:id="UT22084-066-009-263">————, trans. (2023b).
+                                                <title xml:lang="en">
+                            <ref target="http://read.84000.co/translation/toh3990.html">An 
+                                                        Explanation of The Noble Sūtra on the Four Factors</ref>
+                        </title> 
+                                                (*<title xml:lang="Sa-Ltn">Ārya­­catur­dharmaka­­vyākhyāna</title>, Toh 3990). 84000: Translating the
                                                 Words of the Buddha, 2023.</bibl>
                                         <bibl xml:id="UT22084-066-009-162">Skilling, Peter. <title xml:lang="en">Questioning the Buddha: A Selection
                                                   of Twenty-Five Sutras</title>. Somerville, MA:
