--- a/translations/kangyur/placeholders/067-002_toh263-the_sutra_on_patience_with_the_discipline_through_practicing_in_a_way_that_is_like_the_colour_of_the_sky.xml
+++ b/translations/kangyur/placeholders/067-002_toh263-the_sutra_on_patience_with_the_discipline_through_practicing_in_a_way_that_is_like_the_colour_of_the_sky.xml
@@ -10,23 +10,22 @@
                 <title type="otherTitle" xml:lang="Sa-Ltn">āryasamyagācāravṛtta­gaganavarṇavinayakṣānti­nāmamahāyānasūtra</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa yang dag par spyod pa'i tshul nam mkha'i mdog gis 'dul ba'i bzod pa zhes bya ba theg pa chen po'i mdo</title>
                 <title type="otherTitle" xml:lang="zh">《正行理趣虛空色調伏忍辱經》</title>
-                <author role="translatorMain" ref="contributors.xml#team-9"/>
-                <author role="translatorEng" ref="contributors.xml#person-59">Benjamin
-                    Collet-Cassart</author>
-                <editor role="reviser" ref="contributors.xml#person-274">Adam Krug</editor>
-                <consultant role="projectManager" ref="contributors.xml#person-50">Dr. Andreas
-                    Doctor</consultant>
-                <consultant role="dharmaMaster" ref="contributors.xml#person-40">Chökyi Nyima
-                    Rinpoche</consultant>
-                <sponsor ref="sponsors.xml#sponsor-215">Wang Jing and Family</sponsor>
-                <sponsor ref="sponsors.xml#sponsor-214">Chen Yiqiong and Family</sponsor>
-                <sponsor ref="sponsors.xml#sponsor-213">Gu Yun and  Family</sponsor>
+                <author role="translatorMain" xml:id="UT22084-067-002-2"/>
+                <author role="translatorEng" xml:id="UT22084-067-002-3">Benjamin Collet-Cassart</author>
+                <editor role="reviser" xml:id="UT22084-067-002-4">Adam Krug</editor>
+                <consultant role="projectManager" xml:id="UT22084-067-002-5">Andreas Doctor</consultant>
+                <consultant role="dharmaMaster" xml:id="UT22084-067-002-6">Chökyi Nyima Rinpoche</consultant>
+                <editor role="projectEditor" xml:id="UT22084-067-002-7">David Fiordalis</editor>
+                <sponsor xml:id="UT22084-067-002-8">Wang Jing and Family</sponsor>
+                <sponsor xml:id="UT22084-067-002-9">Chen Yiqiong and Family</sponsor>
+                <sponsor xml:id="UT22084-067-002-10">Gu Yun and  Family</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.9 <date>2020</date>
+                <edition>v 0.0.12 <date>2023</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.g">
+            <publicationStmt>
+                <availability status="2.f"/>
                 <idno xml:id="UT22084-067-002"/>
                 <date/>
             </publicationStmt>
@@ -41,20 +40,54 @@
                     <idno source-id="O1JC114941JC11918" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2023-04-04T14:55:06.282Z" user="admin">04/04/2023 14:55:06</note>
-                <note type="updated" update="text-version" value="0.0.1" date-time="2020-04-22T10:08:09.648Z" user="line-tofte">0.0.1</note>
-                <note type="updated" update="translation-status" value="2.h" date-time="2020-06-17T13:57:27.628Z" user="line-tofte">2.h</note>
-                <note type="updated" update="text-version" value="0.0.2" date-time="2021-05-10T13:35:04.385Z" user="amy">Auto (update-titles)</note>
-                <note type="updated" update="text-version" value="0.0.3" date-time="2021-05-10T16:44:42.824Z" user="amy">Auto (update-titles)</note>
-                <note type="updated" update="text-version" value="0.0.4" date-time="2021-06-21T04:52:57.321Z" user="cabie-sim">Auto (update-sponsorship)</note>
-                <note type="updated" update="text-version" value="0.0.5" date-time="2021-06-21T04:53:25.595Z" user="cabie-sim">Auto (update-sponsorship)</note>
-                <note type="updated" update="text-version" value="0.0.6" date-time="2021-06-21T04:57:50.187Z" user="cabie-sim">Auto (update-sponsorship)</note>
-                <note type="updated" update="text-version" value="0.0.7" date-time="2021-07-05T16:25:24.728Z" user="mike">summary added</note>
-                <note type="updated" update="text-version" value="0.0.8" date-time="2022-07-26T07:12:55.988Z" user="cabie-sim">Auto (update-titles)</note>
-                <note type="updated" update="translation-status" value="2.g" date-time="2023-04-04T14:55:01.986Z" user="line-tofte">2.g</note>
-                <note type="updated" update="text-version" value="0.0.9" date-time="2023-04-04T14:55:01.986Z" user="line-tofte">Auto (update-publication-status)</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#line-tofte" when="2020-04-22T10:08:09.648Z" type="text-version" status="0.0.1" xml:id="UT22084-067-002-11">
+                    <desc>0.0.1</desc>
+                </change>
+                <change who="#line-tofte" when="2020-06-17T13:57:27.628Z" type="translation-status" status="2.h" xml:id="UT22084-067-002-12">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#amy" when="2021-05-10T13:35:04.385Z" type="text-version" status="0.0.2" xml:id="UT22084-067-002-13">
+                    <desc>Auto (update-titles)</desc>
+                </change>
+                <change who="#amy" when="2021-05-10T16:44:42.824Z" type="text-version" status="0.0.3" xml:id="UT22084-067-002-14">
+                    <desc>Auto (update-titles)</desc>
+                </change>
+                <change who="#cabie-sim" when="2021-06-21T04:52:57.321Z" type="text-version" status="0.0.4" xml:id="UT22084-067-002-15">
+                    <desc>Auto (update-sponsorship)</desc>
+                </change>
+                <change who="#cabie-sim" when="2021-06-21T04:53:25.595Z" type="text-version" status="0.0.5" xml:id="UT22084-067-002-16">
+                    <desc>Auto (update-sponsorship)</desc>
+                </change>
+                <change who="#cabie-sim" when="2021-06-21T04:57:50.187Z" type="text-version" status="0.0.6" xml:id="UT22084-067-002-17">
+                    <desc>Auto (update-sponsorship)</desc>
+                </change>
+                <change who="#mike" when="2021-07-05T16:25:24.728Z" type="text-version" status="0.0.7" xml:id="UT22084-067-002-18">
+                    <desc>summary added</desc>
+                </change>
+                <change who="#cabie-sim" when="2022-07-26T07:12:55.988Z" type="text-version" status="0.0.8" xml:id="UT22084-067-002-19">
+                    <desc>Auto (update-titles)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-04-04T14:55:01.986Z" type="translation-status" status="2.g" xml:id="UT22084-067-002-20">
+                    <desc>2.g</desc>
+                </change>
+                <change who="#line-tofte" when="2023-04-04T14:55:01.986Z" type="text-version" status="0.0.9" xml:id="UT22084-067-002-21">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-04-04T14:55:38.128Z" type="text-version" status="0.0.10" xml:id="UT22084-067-002-22">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.11" xml:id="UT22084-067-002-23">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-08-14T09:14:18.94Z" type="translation-status" status="2.f" xml:id="UT22084-067-002-24">
+                    <desc>2.f</desc>
+                </change>
+                <change who="#line-tofte" when="2023-08-14T09:14:18.94Z" type="text-version" status="0.0.12" xml:id="UT22084-067-002-25">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
