--- a/translations/kangyur/placeholders/072-022_toh322-verses_on_prasenajit.xml
+++ b/translations/kangyur/placeholders/072-022_toh322-verses_on_prasenajit.xml
@@ -8,14 +8,15 @@
                 <title type="mainTitle" xml:lang="Sa-Ltn">prasenajidgāthā</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">gsal rgyal gyi tshigs bcad/</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">gsal rgyal gyi tshigs su bcad pa</title>
-                <author role="translatorMain" ref="eft:team-69"/>
-                <author role="translatorEng" ref="eft:person-379">Elizabeth Angowski</author>
+                <author role="translatorMain" xml:id="UT22084-072-022-1"/>
+                <author role="translatorEng" xml:id="UT22084-072-022-2">Elizabeth Angowski</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.3 <date>2022</date>
+                <edition>v 0.0.5 <date>2023</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="3">
+            <publicationStmt>
+                <availability status="2.h"/>
                 <idno xml:id="UT22084-072-022"/>
                 <date/>
             </publicationStmt>
@@ -30,9 +31,33 @@
                     <idno source-id="O1JC114941JC11998" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2022-05-02T10:42:47.846Z" user="admin">02/05/2022 10:42:47</note>    <note type="updated" update="translation-status" value="4" date-time="2022-04-21T13:38:11.124Z" user="line-tofte">4</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2022-04-21T13:38:11.124Z" user="line-tofte">0.0.1</note>    <note type="updated" update="translation-status" value="3" date-time="2022-05-02T10:42:16.901Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.2" date-time="2022-05-02T10:42:16.901Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="text-version" value="0.0.3" date-time="2022-05-02T10:42:42.139Z" user="line-tofte">Auto (update-contributors)</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#line-tofte" when="2022-04-21T13:38:11.124Z" type="translation-status" status="4" xml:id="UT22084-072-022-3">
+                    <desc>4</desc>
+                </change>
+                <change who="#line-tofte" when="2022-04-21T13:38:11.124Z" type="text-version" status="0.0.1" xml:id="UT22084-072-022-4">
+                    <desc>0.0.1</desc>
+                </change>
+                <change who="#line-tofte" when="2022-05-02T10:42:16.901Z" type="translation-status" status="3" xml:id="UT22084-072-022-5">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2022-05-02T10:42:16.901Z" type="text-version" status="0.0.2" xml:id="UT22084-072-022-6">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2022-05-02T10:42:42.139Z" type="text-version" status="0.0.3" xml:id="UT22084-072-022-7">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.4" xml:id="UT22084-072-022-8">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-08-14T12:56:33.086Z" type="translation-status" status="2.h" xml:id="UT22084-072-022-9">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2023-08-14T12:56:33.086Z" type="text-version" status="0.0.5" xml:id="UT22084-072-022-10">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
