--- a/translations/tengyur/publications/113-010_toh3990-aryacaturdharmakavyakhyana.xml
+++ b/translations/tengyur/publications/113-010_toh3990-aryacaturdharmakavyakhyana.xml
@@ -26,7 +26,7 @@
                                         Cotter</editor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 0.1.2 <date>2023</date>
+                <edition>v 0.1.3 <date>2023</date>
                 </edition>
             </editionStmt>
                         <publicationStmt>
@@ -191,6 +191,9 @@
                 <change who="#john" when="2023-08-12T18:22:39.76Z" type="text-version" status="0.1.2" xml:id="UT23703-113-010-148">
                     <desc>User set version to 0.1.2</desc>
                 </change>
+                <change who="#john" when="2023-08-14T13:08:29.063Z" type="text-version" status="0.1.3" xml:id="UT23703-113-010-248">
+                    <desc>Further edits to notes and bibliography.</desc>
+                </change>
             </revisionDesc>
         </fileDesc>
         </teiHeader>
@@ -241,8 +244,9 @@
                                                   <hi rend="small-caps">ce</hi>, but many of the
                                                   details of his life are unclear. For attempts to
                                                   reconcile the various biographical sources, see
-                                                  Anacker (1984), pp. 7–28, and Pereira and Tiso
-                                                  (1987).</note> is a commentary on <title xml:lang="en">The Noble Mahāyāna Sūtra on the Four
+                                                  Anacker (1984), pp. 7–28, Pereira and Tiso
+                                                  (1987), Skilling (2000), and Gold (2015) pp. 1–21.</note> is a 
+                                                commentary on <title xml:lang="en">The Noble Mahāyāna Sūtra on the Four
                                                           Factors</title> (<title xml:lang="Sa-Ltn">Ārya­catur­dharmaka­nāma­mahāyāna­sūtra</title>, Toh
                                                 251).<note place="end" xml:id="UT23703-113-010-105">See Pearcey (2023), 
                                                         <title xml:lang="en">
@@ -470,8 +474,8 @@
                                                 these actions will not fail to bear fruit. </p>
                                         <milestone unit="chunk" xml:id="UT23703-113-010-33"/>
                                         <trailer tid="33">This concludes <title xml:lang="en">“An
-                                                  Explanation of The Noble Sūtra of the Four Factors
-                                                  by the Master Vasubandhu.”</title>
+                                                  Explanation of The Noble Sūtra of the Four Factors”
+                                                  by the Master Vasubandhu.</title>
                     </trailer>
                                 </div>
                         </div>
@@ -550,6 +554,9 @@
                                                 Sūtra des Quatre Préceptes.” <title xml:lang="fr">Journal
                                                   Asiatique</title>, sér. 6, tome 8 (1866):
                                                 269–357.</bibl>
+                                        <bibl xml:id="UT23703-113-010-246">Gold, Jonathan C.
+                                                <title xml:lang="de">Paving the Great Way: Vasubandhu’s Unifying Buddhist Philosophy</title>. 
+                                                New York: Columbia University Press, 2015.</bibl>
                                         <bibl xml:id="UT23703-113-010-46">Herrmann-Pfandt, Adelheid.
                                                   <title xml:lang="de">Die lHan kar ma:
                                                   ein früher Katalog der ins Tibetische übersetzten
@@ -568,7 +575,10 @@
                                                 Research.” <title xml:lang="en">East and
                                                   West</title>, vol. 37, no. 1/4 (1987):
                                                 451–54.</bibl>
-                                        <bibl xml:id="UT23703-113-010-48">Skilling, Peter. <title xml:lang="en">Questioning the Buddha: A Selection
+                                        <bibl xml:id="UT23703-113-010-247">Skilling, Peter (2000). “Vasubandhu and the Vyākhyāyukti Literature.” In 
+                                                <title xml:lang="en">Journal of the International
+                                                Association of Buddhist Studies.</title>, vol. 23, no. 2, 2000: pp. 297–350.</bibl>
+                                        <bibl xml:id="UT23703-113-010-48">———— (2021). <title xml:lang="en">Questioning the Buddha: A Selection
                                                   of Twenty-Five Sutras</title>. Somerville, MA:
                                                 Wisdom Publications, 2021.</bibl>
                                 </div>
@@ -605,7 +615,7 @@
                             <term xml:lang="bo" type="attestedSource" n="1" status="verified">བཟོད་པ།</term>
                             <note type="definition">
                                 <p>Forbearance of the harm
-                                                  done by others. </p>
+                                                  done to one by others. </p>
                             </note>
                         </gloss>
                     </item>
@@ -616,10 +626,10 @@
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">dgon pa la gnas pa</term>
                             <term xml:lang="bo" type="attestedSource" n="1" status="verified">དགོན་པ་ལ་གནས་པ།</term>
                             <note type="definition">
-                                <p>An ideal lifestyle for a
-                                                  practitioner is described as dwelling in a place
+                                <p>An ideal lifestyle for a practitioner is described as dwelling in a place
                                                   suitably removed from the social world of the town
-                                                  so as to best enable spiritual practice.</p>
+                                                  so as to best enable spiritual practice. In some contexts the term can also 
+                                be understood on a more inward level as remaining free from distraction and other disturbing states of mind.</p>
                             </note>
                         </gloss>
                     </item>
@@ -641,9 +651,13 @@
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified" status="verified">vasubandhu</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">dbyig gnyen</term>
                             <term xml:lang="bo" type="attestedSource" n="1" status="verified">དབྱིག་གཉེན།</term>
-                        </gloss>
+                            <note type="definition">
+                                    <p>The great scholar and author of fourth or fifth century Buddhist India, born in Gandhāra and said 
+                                            according to Tibetan and Chinese traditions to have been related to Asaṅga, perhaps as his younger brother.</p>
+                            </note>
+                         </gloss>
                     </item>
-                                </list>
+                        </list>
                         </div>
                 </back>
         </text>
